--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -301,11 +301,10 @@ When working with Gradle's file collection types, be careful to avoid triggering
 Gradle's link:{javadocPath}/org/gradle/api/artifacts/Configuration.html[`Configuration`] and link:{javadocPath}/org/gradle/api/file/FileCollection.html[`FileCollection`] types extend the JDK’s `Collection<File>` interface.
 
 However, calling some available methods from this interface—such as `.size()`, `.isEmpty()`, `getFiles()`, `asPath()`, or `.toList()`—on these Gradle types will implicitly trigger resolution of their dependencies.
-The same is possible with Kotlin stdlib collection extension methods, or Groovy GDK collection extensions.
 Converting a `Configuration` to a simple `Set<File>`s will also cause the loss of any implicit task dependencies it carries.
 
-You should avoid using these methods when configuring your build and stick to the methods defined directly on the Gradle interfaces - this is a necessary _first step_ towards avoiding unwanted eager resolutions.
-Be sure to use <<lazy_configuration.adoc#working_with_files_in_lazy_properties,lazy types and APIs>> that defer resolution to wire task dependencies and inputs correctly.
+You should avoid using these methods when configuring your build and stick to the methods defined directly on the Gradle interfaces.
+Instead, use <<lazy_configuration.adoc#working_with_files_in_lazy_properties,lazy types and APIs>> that defer resolution to wire task dependencies and inputs correctly.
 Some methods that cause resolution are not obvious.
 Be sure to check the actual behavior when using configurations in an atypical way.
 
@@ -313,15 +312,14 @@ Be sure to check the actual behavior when using configurations in an atypical wa
 ==== Don't Do This
 
 ====
-include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/kotlin/lib",files="build.gradle.kts[tags=avoid-this]"]
-include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/groovy/lib",files="build.gradle[tags=avoid-this]"]
+include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/kotlin",files="build.gradle.kts[tags=avoid-this]"]
+include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/groovy",files="build.gradle[tags=avoid-this]"]
 ====
 
-<1> *`isEmpty()` Causes Resolution*: Many seemingly harmless Collections API methods like `isEmpty()` can still cause Gradle to resolve dependencies.
-<2> *Accessing Files directly*: Using `getFiles()` to access the files in a `Configuration` will also cause Gradle to resolve the file collection.
+<1> *`isEmpty()` Causes Resolution*: Many seemingly harmless Collections API methods like `isEmpty()` can cause Gradle to resolve dependencies.
+<2> *Accessing Files directlry*: Using `getFiles()` to access the files in a `Configuration` will also cause Gradle to resolve the file collection.
 <3> *Adding a file via plus operator*: Using the plus operator will force the `runtimeClasspath` configuration to be resolved implicitly.
 The implementation of `Configuration` doesn't override the plus operator for regular files, therefore it falls back to using the eager API, which causes resolution.
-<4> *Be careful with indirect inputs*: Some built-in tasks, for example subtypes of `AbstractCopyTask` like `Zip`, allow adding inputs indirectly and can have the same problems.
 
 ==== Do This Instead
 
@@ -339,8 +337,8 @@ Use APIs that support lazy evaluation.
 ++++
 
 ====
-include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-do/kotlin/lib",files="build.gradle.kts[tags=do-this]"]
-include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-do/groovy/lib",files="build.gradle[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-do/kotlin",files="build.gradle.kts[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-do/groovy",files="build.gradle[tags=do-this]"]
 ====
 
 <1> *Add configurations to Task properties or Specs directly*: This will defer resolution until the task is executed.
