--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -46,7 +46,7 @@ The previous step will help you identify potential problems by issuing deprecati
 ==== Removed incubating method `ObjectFactory#dependencyCollector()`
 
 The incubating `ObjectFactory#dependencyCollector()` method has been removed.
-DependencyCollectors can still be instantiated within Gradle managed objects.
+DependencyCollectors can still be instantiated within Gradle <<properties_providers.adoc#managed_types, managed types>>.
 
 [[changes_9.1]]
 == Upgrading from 9.0 and earlier
