final changes for RC1

--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -297,7 +297,7 @@ These tasks are now only added to a project when a rule-based plugin is applied 
 
 === Configuration Cache changes
 
-==== Unsupported build event listeners are now configuration cache problems
+==== Unsupported build event listeners cause configuration cache problems
 
 The build event listener registration method
 link:{javadocPath}/org/gradle/build/event/BuildEventsListenerRegistry.html#onTaskCompletion(org.gradle.api.provider.Provider)[`BuildEventsListenerRegistry.onTaskCompletion`]
