--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_structuring_builds.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_structuring_builds.adoc
@@ -509,7 +509,7 @@ Additional projects - even if empty - will slow down your build, clutter reporti
 
 To avoid this, be sure to explicitly set the link:{kotlinDslPath}/gradle/org.gradle.api/-project/get-project-dir.html[Project.projectDir] property of any projects included in nested directories: `project(':my-web-module').projectDir = file("subs/web/my-web-module"`).
 
-As ab added benefit, this will allow you to reference the project by the shorter name `:my-web-module` instead of the full logical path `:subs:web:my-web-module`.
+As an added benefit, this will allow you to reference the project by the shorter name `:my-web-module` instead of the full logical path `:subs:web:my-web-module`.
 
 === Example
 
