--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_index.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_index.adoc
@@ -17,7 +17,11 @@
 
 The table below provides a complete list of documented Gradle Best Practices.
 
-Use this as a quick reference to track newly added recommendations, check adoption status, or explore areas for improving your build.
+****
+There are currently *19 Best Practices*.
+****
+
+Use this as a quick reference to track newly added recommendations, check adoption status, or explore areas for improving your build:
 
 [.table]
 |===
