--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -304,8 +304,8 @@ However, calling some available methods from this interface—such as `.size()`,
 The same is possible with Kotlin stdlib collection extension methods, or Groovy GDK collection extensions.
 Converting a `Configuration` to a simple `Set<File>`s will also cause the loss of any implicit task dependencies it carries.
 
-You should avoid using these methods when configuring your build and stick to the methods defined directly on the Gradle interfaces.
-Instead, use <<lazy_configuration.adoc#working_with_files_in_lazy_properties,lazy types and APIs>> that defer resolution to wire task dependencies and inputs correctly.
+You should avoid using these methods when configuring your build and stick to the methods defined directly on the Gradle interfaces - this is a necessary _first step_ towards avoiding unwanted eager resolutions.
+Be sure to use <<lazy_configuration.adoc#working_with_files_in_lazy_properties,lazy types and APIs>> that defer resolution to wire task dependencies and inputs correctly.
 Some methods that cause resolution are not obvious.
 Be sure to check the actual behavior when using configurations in an atypical way.
 
