--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -301,10 +301,11 @@ When working with Gradle's file collection types, be careful to avoid triggering
 Gradle's link:{javadocPath}/org/gradle/api/artifacts/Configuration.html[`Configuration`] and link:{javadocPath}/org/gradle/api/file/FileCollection.html[`FileCollection`] types extend the JDK’s `Collection<File>` interface.
 
 However, calling some available methods from this interface—such as `.size()`, `.isEmpty()`, `getFiles()`, `asPath()`, or `.toList()`—on these Gradle types will implicitly trigger resolution of their dependencies.
-The same is possible with Kotlin stdlib collection extension methods, or Groovy GDK collection extensions.
-Converting a `Configuration` to a simple `Set<File>`s will also cause the loss of any implicit task dependencies it carries.
+The same is possible using Kotlin stdlib collection extension methods or Groovy GDK collection extensions.
+Converting a `Configuration` to a `Set<File>` also discards any implicit task dependencies it carries.
 
-You should avoid using these methods when configuring your build and stick to the methods defined directly on the Gradle interfaces - this is a necessary _first step_ towards avoiding unwanted eager resolutions.
+You should avoid using these methods when configuring your build. 
+Instead, use the methods defined directly on the Gradle interfaces - this is a necessary _first step_ towards preventing eager resolutions.
 Be sure to use <<lazy_configuration.adoc#working_with_files_in_lazy_properties,lazy types and APIs>> that defer resolution to wire task dependencies and inputs correctly.
 Some methods that cause resolution are not obvious.
 Be sure to check the actual behavior when using configurations in an atypical way.
@@ -317,8 +318,8 @@ include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollectio
 include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/groovy/lib",files="build.gradle[tags=avoid-this]"]
 ====
 
-<1> *`isEmpty()` Causes Resolution*: Many seemingly harmless Collections API methods like `isEmpty()` can still cause Gradle to resolve dependencies.
-<2> *Accessing Files directly*: Using `getFiles()` to access the files in a `Configuration` will also cause Gradle to resolve the file collection.
+<1> *`isEmpty()` causes resolution*: Many seemingly harmless Collection API methods like `isEmpty()` cause Gradle to resolve dependencies.
+<2> *Accessing files directly*: Using `getFiles()` to access the files in a `Configuration` will also cause Gradle to resolve the file collection.
 <3> *Adding a file via plus operator*: Using the plus operator will force the `runtimeClasspath` configuration to be resolved implicitly.
 The implementation of `Configuration` doesn't override the plus operator for regular files, therefore it falls back to using the eager API, which causes resolution.
 <4> *Be careful with indirect inputs*: Some built-in tasks, for example subtypes of `AbstractCopyTask` like `Zip`, allow adding inputs indirectly and can have the same problems.
