--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/command_line_interface.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/command_line_interface.adoc
@@ -751,7 +751,7 @@ Refresh the <<dependency_caching.adoc#sec:controlling-dependency-caching-command
 Run Gradle with all task actions disabled. Use this to show which task would have executed.
 
 `--task-graph`::
-Run gradle with all task actions disabled and print the graph of dependencies between tasks.
+Run Gradle with all task actions disabled and print the task dependency graph.
 
 `-t`, `--continuous`::
 Enables <<#sec:continuous_build,continuous build>>. Gradle does not exit and will re-execute tasks when task file inputs change.
